@@ -115,18 +115,18 @@ public class JNAeratorCommandLineArgs {
 		LimitComments(		"-limitComments", 		"Avoid useless comments (source file + line, skipped items...)"),
 		NoComments(			"-noComments", 			"Don't output any member comment."),
 		NoMangling(			"-noMangling", 			"Don't output any C++ name mangling information (may cause C++-decorated symbols not to be found at execution time)."),
-		AddRootDir(         "-addRootDir",          "Remove this directory from the path of descendant source files in the generated documentation.", new ArgDef(Type.ExistingDir, "dir")), 
+		AddRootDir(          "-addRootDir",          "Remove this directory from the path of descendant source files in the generated documentation.", new ArgDef(Type.ExistingDir, "dir")), 
         NoCPP(				"-nocpp",		 		"Do not define the __cplusplus symbol"),
-		Reification(  "-reification",   		"Automatically create OO shortcuts for functions that look like methods (typedPtr.someFunc() for someFunc(typedPtr))"),
-        Undefine(           "-U(.+)",               "Undefine a preprocessor symbol after the autoconfiguration phase.", new ArgDef(Type.String, "symbolName")),
-        GUI(				"-gui",		 			"Show minimalist progression GUI"),
+		Reification(         "-reification",   		"Automatically create OO shortcuts for functions that look like methods (typedPtr.someFunc() for someFunc(typedPtr))"),
+        Undefine(             "-U(.+)",               "Undefine a preprocessor symbol after the autoconfiguration phase.", new ArgDef(Type.String, "symbolName")),
+        GUI(				    "-gui",		 			"Show minimalist progression GUI"),
 		NoRuntime(			"-noRuntime",		 	"Don't copy runtime classes to JAR output"),
-		Synchronized(	"-synchronized",			"Generate synchronized native methods"),
-		BeanStructs(		"-beanStructs",			"Generate getters and setters for struct fields"),
+		Synchronized(	    "-synchronized",			"Generate synchronized native methods"),
+		BeanStructs(		    "-beanStructs",			"Generate getters and setters for struct fields"),
 		BeautifyNames(		"-beautifyNames",		"Transform C names to Java-looking names : some_func() => someFunc()"),
-		NoBodies(           "-noBodies",            "Don't convert function bodies to equivalent Java code (BridJ only)."),
+		ConvertBodies(       "-convertBodies",        "Experimental conversion of function bodies to equivalent Java code (BridJ only)."),
         JarOut(				"-jar",					"Jar file where all generated sources and the compiled classes go", new ArgDef(Type.OutputFile, "outFile")),
-		ScalaStructSetters( "-scalaStructSetters",  "Generate Scala-style setters for BridJ structs (with a name like fieldName_$eq)"),
+		ScalaStructSetters(  "-scalaStructSetters",  "Generate Scala-style setters for BridJ structs (with a name like fieldName_$eq)"),
         WCharAsShort(		"-wcharAsShort",		"Force treatment of wchar_t as short (char by default)"),
         CallbackInvokeName( "-callbacksInvokeMethodName", "Name of the invocation method of callbacks ('apply' by default)", new ArgDef(Type.String, "methodName")),
 		LibraryNamingPrefixes("-libraryNamingPrefixes", "Define prefixes commonly used in the library so that objectification of functions is optimal (See -noObjectification)", new ArgDef(Type.String, "commaSeparatedPrefixes")),
