@@ -113,6 +113,7 @@ public class JNAeratorStudio extends JPanel {
 		structsAsTopLevelClassesCb = new JCheckBox("Structs as Top-Level classes", true),
 		charPtrAsString = new JCheckBox("char*/wchar_t* as (W)String", false),
 		reificationCb = new JCheckBox("Reification", false),
+		convertBodiesCb = new JCheckBox("Convert statements", false),
 		scalaSetters = new JCheckBox("Scala struct field setters", false),
 		noCommentNoManglingCb = new JCheckBox("No comment & no mangling", false);
 
@@ -234,6 +235,7 @@ public class JNAeratorStudio extends JPanel {
 			setPref("options.direct", directCallingCb.isSelected());
 			setPref("options.topLevelStructs", structsAsTopLevelClassesCb.isSelected());
 			setPref("options.reification", reificationCb.isSelected());
+			setPref("options.convertBodies", convertBodiesCb.isSelected());
 			setPref("options.scalaSetters", scalaSetters.isSelected());
 			setPref("options.charPtrAsString", charPtrAsString.isSelected());
 			setPref("options.targetRuntime", ((JNAeratorConfig.Runtime)runtimeCombo.getSelectedItem()).name());
@@ -403,13 +405,14 @@ public class JNAeratorStudio extends JPanel {
 		Box optBox = Box.createVerticalBox();
 		optBox.add(libBox);
 		
-		JPanel optPanel = new JPanel(new GridLayout(2, 3));
+		JPanel optPanel = new JPanel(new GridLayout(3, 3));
 		optPanel.add(directCallingCb);
 		optPanel.add(noCommentNoManglingCb);
 		optPanel.add(structsAsTopLevelClassesCb);
         optPanel.add(charPtrAsString);
         optPanel.add(scalaSetters);
         optPanel.add(reificationCb);
+        optPanel.add(convertBodiesCb);
         optBox.add(optPanel);
 		for (Component c : optBox.getComponents())
 			((JComponent)c).setAlignmentX(0);
@@ -510,6 +513,7 @@ public class JNAeratorStudio extends JPanel {
 				config.useJNADirectCalls = directCallingCb.isSelected();
 				config.putTopStructsInSeparateFiles = structsAsTopLevelClassesCb.isSelected();
 				config.reification = reificationCb.isSelected();
+				config.convertBodies = convertBodiesCb.isSelected();
 				config.scalaStructSetters = scalaSetters.isSelected();
                 config.stringifyConstCStringReturnValues = config.charPtrAsString = charPtrAsString.isSelected();
                 config.runtime = (Runtime) runtimeCombo.getSelectedItem();
@@ -720,6 +724,7 @@ public class JNAeratorStudio extends JPanel {
 			js.directCallingCb.setSelected(getPref("options.direct", false));
 			js.structsAsTopLevelClassesCb.setSelected(getPref("options.topLevelStructs", true));
 			js.reificationCb.setSelected(getPref("options.reification", false));
+			js.convertBodiesCb.setSelected(getPref("options.convertBodies", false));
             js.charPtrAsString.setSelected(getPref("options.charPtrAsString", false));
             js.scalaSetters.setSelected(getPref("options.scalaSetters", false));
             js.noCommentNoManglingCb.setSelected(getPref("options.noCommentNoMangling", false));
